--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" class='dark'>
+
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="description"
-      content="Damian Soto - Frontend Developer - Portfolio."
-    />
-    <meta
-      name="keywords"
-      content="Web Developer,Javascript,React, Full stack developer,Damian soto,Damian soto concha,Damian soto linkedin"
-    />
+    <meta name="description" content="Damian Soto - Full Stack Developer - Portfolio." />
+    <meta name="keywords"
+      content="Web Developer,Javascript,React, Full stack developer,Damian soto,Damian soto concha,Damian soto linkedin" />
     <link rel="icon" type="image/svg+xml" href="/logo-ds.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="canonical" href="https://www.damiansoto.dev" />
@@ -18,15 +14,8 @@
     <title>Damián Soto Concha</title>
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Damian Soto" />
-    <meta
-      property="og:description"
-      content="Damian Soto - Frontend Developer - Portfolio."
-    />
-    <meta
-      name="image"
-      property="og:image"
-      content="https://damiansoto.dev/logo-ds.svg"
-    />
+    <meta property="og:description" content="Damian Soto - Full Stack Developer - Portfolio." />
+    <meta name="image" property="og:image" content="https://damiansoto.dev/logo-ds.svg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
 
@@ -34,8 +23,10 @@
     <meta property="og:site_name" content="damiansoto" />
     <meta name="author" content="Damian Soto" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+
 </html>
